2007-10-25:
	* src/harness.c: use the PAM environment when running commands

2007-10-23:
	* src/log.c: use the AUTHPRIV facility, when defined, else AUTH,
	else the default.

2007-09-05:
	* src/v5.c(v5_passwd_error_message): tweak some error text to
	hopefully make more sense to people (#230438)

2007-08-15:
	* src/v4.c: if we fail to open the ticket file with TKT_FIL_ACC,
	debug log the file's permissions and our process's identity

2007-08-02:
	* src/v4.c: warn when an fchown() fails, and don't try to give away
	our file; that's for later
	* src/pam_krb5.5.in,src/pam_krb5.8.in: note that "tokens" is
	unnecessary if the calling application was written correctly.
	* src/pam_krb5.8.in: reintroduce a missing line.
	* COPYING: be more explicit about which BSD license we mean

2007-07-27:
	* src/v5.c: fix v5_check_initialized_pwc() with Heimdal
	* src/v4.c: fix compilation for no-krb4-support cases, avoid cloning
	the tktfile if we were asked not to do that
	* src/stash.c: don't leak the v4 tktfile name when cleaning up, and
	fix the check for whether or not we have a saved file

2007-07-25:
	* src/v4.c: try to clean up the debug message for v5->v4 principal
	name conversion

2007-07-24:
	* configure.ac: check for krb5_get_prompt_types, though we don't do
	anything with it yet.
	* src/minikafs.c: factor the v5- and v4-specific bits of settoken()
	out into a single function, and allocate the buffer from the heap
	rather than dynamically-sizing it based on the function's arguments.

2007-07-20:
	* src/v5.c: get v5_check_initialized_pwc() working on Heimdal.
	* src/pam_krb5_storetmp.c: silence a compiler warning comparing the
	return code from write() with strlen().
	* src/password.c: tweak the error message which is logged when
	password changing fails to avoid "()".  Check for the presence of
	password-changing creds in the update phase, and error out if they
	aren't found.
	* src/v5.c: add v5_check_initialized_pwc() to check specifically